--- a/src/global.css
+++ b/src/global.css
@@ -12,6 +12,11 @@
   --green-500: #00875f;
 }
 
+:focus {
+  outline: transparent; /* Tira a borda branca que fica ao redor dos elementos quando selecionamos usando TAB */
+  box-shadow: 0 0 0 2px var(--green-500);
+}
+
 * {
   margin: 0;
   padding: 0;
